<resources>
    <string name="app_name">ESTBN_MVB</string>

    <string name="pre_p1_title">أظهار الموقع</string>
    <string name="pre_p1_desc">لوريم إيبسوم طريقة لكتابة النصوص في النشر والتصميم الجرافيكي تستخدم بشكل شائع لتوضيح الشكل المرئي للمستند أو الخط </string>

    <string name="pre_p2_title">أظهار الموقع</string>
    <string name="pre_p2_desc">لوريم إيبسوم طريقة لكتابة النصوص في النشر والتصميم الجرافيكي تستخدم بشكل شائع لتوضيح الشكل المرئي للمستند أو الخط </string>

    <string name="pre_p3_title">أظهار الموقع</string>
    <string name="pre_p3_desc">لوريم إيبسوم طريقة لكتابة النصوص في النشر والتصميم الجرافيكي تستخدم بشكل شائع لتوضيح الشكل المرئي للمستند أو الخط </string>


    <string name="start">ابدأ الان</string>
    <string name="service_provider">مقدم خدمة</string>

    <string name="skip">Skip</string>
    <string name="start_as">البدأ ك</string>
    <string name="car_owner">مالك سيارة</string>

    <string name="login_title">تسجيل الدخول</string>
    <string name="login_sub_title">أهلا بعودتك ، لقد اشتقنا أليك</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="phone_hint">01009999999</string>
    <string name="password_text">كلمة السر</string>
    <string name="password_hint">************</string>
    <string name="remember_me">تذكرنى</string>
    <string name="forget_password">نسيت كلمة السر ؟</string>
    <string name="login_text">تسجيل الدخول</string>
    <string name="no_account">ليس لديك حساب ؟</string>
    <string name="create_account"> انشاء حساب</string>
</resources>