<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context=".MainActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="101dp"
        android:src="@drawable/ic_estbn_logo_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="183dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_dialog"
        android:backgroundTint="@color/primary"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/primaryDark"
                android:text="@string/login_title"
                android:textSize="24sp"
                android:layout_marginBottom="0sp"
                android:fontFamily="@font/arabicbold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/gray"
                android:text="@string/login_sub_title"
                android:textSize="16sp"
                android:fontFamily="@font/arabicreg"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/arabicreg"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border_sm_radius"
                android:hint="@string/phone_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="phone"
                android:paddingRight="20sp"
                android:paddingLeft="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:gravity="right"
                android:fontFamily="@font/arabicreg"
                android:layout_marginTop="8sp"
                android:drawableLeft="@drawable/ic_phone_icon"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:layoutDirection="rtl"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/arabicreg"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border_sm_radius"
                android:hint="@string/password_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="textPassword"
                android:paddingRight="20sp"
                android:paddingLeft="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:gravity="right"
                android:layout_marginTop="8sp"
                android:fontFamily="@font/arabicreg"
                android:drawableLeft="@drawable/ic_password_hide"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layoutDirection="rtl"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12sp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25sp"
                        android:orientation="horizontal">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="0sp"
                            android:padding="0sp"

                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/remember_me"
                            android:fontFamily="@font/arabicreg"
                            android:layout_marginRight="8sp"
                            android:layout_marginTop="2sp"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimaryDark"
                            />

                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/forget_password"
                        android:textSize="12sp"
                        android:fontFamily="@font/arabicreg"
                        android:textColor="@color/colorPrimaryDark"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32sp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_radius"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/login_text"
                    android:fontFamily="@font/arabicreg"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="12sp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:fontFamily="@font/arabicreg"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:layout_marginRight="2sp"
                    android:fontFamily="@font/arabicreg"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>